Fix spacing

--- a/_sass/_RAVI.scss
+++ b/_sass/_RAVI.scss
@@ -35,7 +35,7 @@ body {
 .masthead a {
     color: lightskyblue;
     /* margin-right: 1.5rem; */
-    padding: 1rem 0.75rem;
+    padding: 0.7rem 0.7rem;
     display: inline-block;
     transform: skew(15deg);
 
